# homework13.1

./: README.md  dom_13(yourself).py  dom_13.py  pyproject.toml  tests.py
src/: abstract_product.py  category.py  lawn_grass.py  main.py  product.py  repr_mixin.py  smartphone.py
tests/: test_category.py  test_product.py
